--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,17 +32,7 @@
     </div>
 
     {% block footer %}
-    <footer class="footer">
-        <p>Chemfiles is built by <a href="{% url '/contact.html' %}">G. Fraux</a> and
-            open-source, hosted on <a href="http://github.com/chemfiles/chemfiles">Github</a>.
-        </p>
-        <small>
-            Website built with
-            <a href="http://github.com/koenbok/Cactus">Cactus</a> —
-            <a href="http://getbootstrap.com/">Bootstrap</a> —
-            <a href="http://glyphicons.com/">Glyphicon</a>
-        </small>
-    </footer>
+        {% include "footer.html" %}
     {% endblock %}
 
     <script src="{% static '/static/js/vendor/jquery-1.10.1.js' %}"></script>
