Use octoicons font for icons

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,6 +5,6 @@
         <a href="http://github.com/chemfiles/chemfiles.github.io">Website</a> built with
         <a href="http://github.com/koenbok/Cactus">Cactus</a> —
         <a href="http://getbootstrap.com/">Bootstrap</a> —
-        <a href="http://glyphicons.com/">Glyphicon</a>
+        <a href="https://octicons.github.com/">Octicons</a>
     </small>
 </footer>
