--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="{% static '/static/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static '/static/css/octicons.css' %}">
     <link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.css' %}">
     <link rel="stylesheet" href="{% static '/static/css/pygments.css' %}">
     <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
