--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,6 +34,10 @@
     <script src="{% static '/static/js/vendor/jquery-1.10.1.js' %}"></script>
     <script src="{% static '/static/js/vendor/bootstrap.js' %}"></script>
     <script src="{% static '/static/js/main.js' %}"></script>
+
+    {% block analytics %}
+        {% include "google-analytics.html" %}
+    {% endblock %}
 </body>
 
 {% block scripts %}
