Use Github hosted documentation

--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -9,10 +9,14 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="http://chemfiles.readthedocs.org/">Main documentation (C++)</a></li>
+                    <li class="dropdown-header">Main documentation (C++)</li>
+                    <li><a href="chemfiles/latest/index.html">Latest</a></li>
+                    <li><a href="chemfiles/0.6.0/index.html">0.6.0</a></li>
+                    <li><a href="chemfiles/0.5.0/index.html">0.5.0</a></li>
+                    <li><a href="chemfiles/0.4.0/index.html">0.4.0</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Other languages</li>
-                    <li><a href="http://chemfiles.readthedocs.org/en/latest/c-api.html">C</a></li>
+                    <li><a href="chemfiles/latest/capi/index.html">C</a></li>
                     <li><a href="http://chemfiles.readthedocs.org/projects/fortran/en/latest/">Fortran</a></li>
                     <li><a href="http://chemfiles.readthedocs.org/projects/python/en/latest/">Python</a></li>
                     <li><a href="http://chemfiles.readthedocs.org/projects/julia/en/latest/">Julia</a></li>
