--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -13,6 +13,11 @@ html, body {
   padding-bottom:100px; /* this needs to be bigger than footer height*/
 }
 
+#chemfiles-logo {
+    max-width: 300px;
+    padding-top: 20px;
+}
+
 .footer {
   padding-top: 20px;
   text-align: center;
