--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -9,18 +9,21 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li class="dropdown-header">Main documentation (C++)</li>
+                    <li class="dropdown-header">C++ and C</li>
                     <li><a href="chemfiles/latest/index.html">Latest</a></li>
-                    <li><a href="chemfiles/0.6.0/index.html">0.6.0</a></li>
-                    <li><a href="chemfiles/0.5.0/index.html">0.5.0</a></li>
-                    <li><a href="chemfiles/0.4.0/index.html">0.4.0</a></li>
+                    <li><a href="chemfiles/0.7.4/index.html">Stable (0.7.4)</a></li>
                     <li class="divider"></li>
-                    <li class="dropdown-header">Other languages</li>
-                    <li><a href="chemfiles/latest/capi/index.html">C</a></li>
-                    <li><a href="http://chemfiles.readthedocs.org/projects/fortran/en/latest/">Fortran</a></li>
-                    <li><a href="http://chemfiles.readthedocs.org/projects/python/en/latest/">Python</a></li>
-                    <li><a href="http://chemfiles.readthedocs.org/projects/julia/en/latest/">Julia</a></li>
-                    <li><a href="http://chemfiles.github.io/chemfiles.rs/chemfiles/">Rust</a></li>
+                    <li class="dropdown-header">Python</li>
+                    <li><a href="chemfiles.py/latest/">Latest</a></li>
+                    <li><a href="chemfiles.py/0.7.4/">Stable (0.7.4)</a></li>
+                    <li class="dropdown-header">Fortran</li>
+                    <li><a href="chemfiles.f03/latest/">Latest</a></li>
+                    <li><a href="chemfiles.f03/0.7.4/">Stable (0.7.4)</a></li>
+                    <li class="dropdown-header">Julia</li>
+                    <li><a href="chemfiles.jl/latest/">Latest</a></li>
+                    <li class="dropdown-header">Rust</li>
+                    <li><a href="chemfiles.rs/latest/chemfiles/">Latest</a></li>
+                    <li><a href="chemfiles.rs/0.7.4/chemfiles/">Stable (0.7.40)</a></li>
                 </ul>
             </li>
         </ul>
