Update the documentation page

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -34,6 +34,11 @@ html, body {
     padding: 5px;
 }
 
+.center-block {
+    display: block;
+    margin: auto;
+}
+
 .flat-btn {
     display: inline-block;
     margin: 0 5px;
@@ -41,7 +46,6 @@ html, body {
     font-size: 16.5px;
     padding: 12px 20px;
     border: 0;
-    /*background: #34495E;*/
     color: #FFF;
     cursor: pointer;
     outline: 0;
