--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <p>Chemfiles (C) 2014-2017 <a href="https://guillaume.fraux.fr/">Guillaume Fraux</a>
-    — distributed under the MPL-v2 licence —
+    — distributed under the BSD licence —
     twitter: <a href="https://twitter.com/libchemfiles">@libchemfiles</a>
     </p>
     <small>
