--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,12 +14,12 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="{% static '/static/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static '/static/css/octicons.css' %}">
-    <link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.css' %}">
-    <link rel="stylesheet" href="{% static '/static/css/pygments.css' %}">
-    <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
-    <script src="{% static '/static/js/vendor/modernizr-2.6.2.js' %}"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/octicons.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/static/css/pygments.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="/static/js/vendor/modernizr-2.6.2.js"></script>
 </head>
 
 <body>
@@ -38,9 +38,9 @@
         {% include "footer.html" %}
     {% endblock %}
 
-    <script src="{% static '/static/js/vendor/jquery-1.10.1.js' %}"></script>
-    <script src="{% static '/static/js/vendor/bootstrap.js' %}"></script>
-    <script src="{% static '/static/js/main.js' %}"></script>
+    <script src="/static/js/vendor/jquery-1.10.1.js"></script>
+    <script src="/static/js/vendor/bootstrap.js"></script>
+    <script src="/static/js/main.js"></script>
 
     {% block analytics %}
         {% include "google-analytics.html" %}
