--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{% url "/index.html" %}">Chemfiles</a>
+        <a class="navbar-brand" href="/index.html">Chemfiles</a>
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="{% if_current_page '/index.html' 'active' '' %}"><a href="{% url '/index.html' %}">Home</a></li>
-            <li class="{% if_current_page '/contact.html' 'active' '' %}"><a href="{% url '/contact.html' %}">Contact</a></li>
+            <li {% if current_page == 'index.html' %} class="active" {% endif %}><a href="/index.html">Home</a></li>
+            <li {% if current_page == 'contact.html' %} class="active" {% endif %}><a href="/contact.html">Contact</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                 <ul class="dropdown-menu">
