--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,12 +1,6 @@
 <footer class="footer">
-    <p>Chemfiles (C) 2014-2018 <a href="https://guillaume.fraux.fr/">Guillaume Fraux</a>
+    <p>Chemfiles (C) 2014-2020 <a href="https://guillaume.fraux.fr/">Guillaume Fraux</a> and contributors
     — distributed under the BSD licence —
     twitter: <a href="https://twitter.com/libchemfiles">@libchemfiles</a>
     </p>
-    <small>
-        <a href="http://github.com/chemfiles/chemfiles.github.io">Website</a> built with
-        <a href="http://github.com/koenbok/Cactus">Cactus</a> —
-        <a href="http://getbootstrap.com/">Bootstrap</a> —
-        <a href="https://octicons.github.com/">Octicons</a>
-    </small>
 </footer>
