--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,18 +14,18 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/octicons.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/pygments.css">
     <link rel="stylesheet" href="/static/css/main.css">
-    <script src="/static/js/vendor/modernizr-2.6.2.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-fixed-top">
-        {% include "nav.html" %}
-    </nav>
+    {% include "nav.html" %}
 
     <div id="wrap">
         <main>
@@ -38,8 +38,6 @@
         {% include "footer.html" %}
     {% endblock %}
 
-    <script src="/static/js/vendor/jquery-1.10.1.js"></script>
-    <script src="/static/js/vendor/bootstrap.js"></script>
     <script src="/static/js/main.js"></script>
 
     {% block analytics %}
