--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -1,38 +1,49 @@
-<div class="container">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="/index.html">Chemfiles</a>
-    </div>
-    <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li {% if current_page == 'contact.html' %} class="active" {% endif %}><a href="/contact.html">
-                {% octoicon 'organization' %} Contact
-            </a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    {% octoicon 'book' %} Documentation <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li class="dropdown-header">C++ and C</li>
-                    <li><a href="/chemfiles/latest/index.html">Latest</a></li>
-                    <li><a href="/chemfiles/0.9.3/index.html">Stable (0.9.3)</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Python</li>
-                    <li><a href="/chemfiles.py/latest/">Latest</a></li>
-                    <li><a href="/chemfiles.py/0.9.3/">Stable (0.9.3)</a></li>
-                    <li class="dropdown-header">Fortran</li>
-                    <li><a href="/chemfiles.f03/latest/">Latest</a></li>
-                    <li><a href="/chemfiles.f03/0.9.3/">Stable (0.9.3)</a></li>
-                    <li class="dropdown-header">Julia</li>
-                    <li><a href="/Chemfiles.jl/latest/">Latest</a></li>
-                    <li><a href="/Chemfiles.jl/v0.9.3/">Stable (0.9.3)</a></li>
-                    <li class="dropdown-header">Rust</li>
-                    <li><a href="/chemfiles.rs/latest/chemfiles/">Latest</a></li>
-                    <li><a href="/chemfiles.rs/0.9.3/chemfiles/">Stable (0.9.30)</a></li>
-                </ul>
-            </li>
-            <li><a href="https://github.com/chemfiles/chemfiles">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="/index.html">
+        <img src="/android-chrome-192x192.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        Chemfiles
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapsed" aria-controls="navbar-collapsed" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar-collapsed">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" {% if current_page == 'contact.html' %} class="active" {% endif %}>
+            <a class="nav-link" href="/contact.html">
+            {% octoicon 'organization' %} Contact
+            </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="documentation-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {% octoicon 'book' %} Documentation
+          </a>
+          <div class="dropdown-menu" aria-labelledby="documentation-dropdown">
+            <div class="dropdown-header">C++ and C</div>
+            <a class="dropdown-item" href="/chemfiles/latest/index.html">Latest</a>
+            <a class="dropdown-item" href="/chemfiles/0.9.3/index.html">Stable (0.9.3)</a>
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-header">Python</div>
+            <a class="dropdown-item" href="/chemfiles.py/latest/">Latest</a>
+            <a class="dropdown-item" href="/chemfiles.py/0.9.3/">Stable (0.9.3)</a>
+            <div class="dropdown-header">Fortran</div>
+            <a class="dropdown-item" href="/chemfiles.f03/latest/">Latest</a>
+            <a class="dropdown-item" href="/chemfiles.f03/0.9.3/">Stable (0.9.3)</a>
+            <div class="dropdown-header">Julia</div>
+            <a class="dropdown-item" href="/Chemfiles.jl/latest/">Latest</a>
+            <a class="dropdown-item" href="/Chemfiles.jl/v0.9.3/">Stable (0.9.3)</a>
+            <div class="dropdown-header">Rust</div>
+            <a class="dropdown-item" href="/chemfiles.rs/latest/chemfiles/">Latest</a>
+            <a class="dropdown-item" href="/chemfiles.rs/0.9.3/chemfiles/">Stable (0.9.30)</a>
+          </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://github.com/chemfiles/chemfiles">
                 {% octoicon 'mark-github' %} Sources
-            </a></li>
-        </ul>
-    </div><!--/.navbar-collapse -->
-</div>
+            </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
